--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "url": "git://github.com/EBSCOIS/discover.medical.shared-mfe-lib.git"
   },
   "devDependencies": {
-    "@ebsco/dependency-audit": "^0.2.3",
     "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
+    "@ebsco/dependency-audit": "^0.2.3",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
@@ -31,17 +31,17 @@
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^5.8.0",
-    "eslint-plugin-react": "^7.4.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-prettier": "^2.6.0",
+    "eslint-plugin-react": "^7.4.0",
     "jest": "^24.8.0",
-    "lint-staged": "^7.0.0",
-    "prettier": "^1.18.2",
     "jest-cli": "^23.6.0",
+    "lint-staged": "^7.0.0",
     "node-sass": "^4.7.2",
+    "prettier": "^1.18.2",
     "prop-types": "^15.6.0",
-    "react-addons-test-utils": "^15.5.1",
     "react": "^16.6.0",
+    "react-addons-test-utils": "^15.5.1",
     "react-dom": "^16.6.0",
     "react-hot-loader": "next",
     "react-test-renderer": "^16.0.0",
@@ -80,5 +80,8 @@
   },
   "resolutions": {
     "babel-core": "7.0.0-bridge.0"
+  },
+  "dependencies": {
+    "webpack-node-externals": "^1.7.2"
   }
 }
